--- a/composer.json
+++ b/composer.json
@@ -50,5 +50,8 @@
     "symfony/finder": "^3.0",
     "symfony/process": "^3.1",
     "symfony/yaml": "^3.0"
+  },
+  "replace": {
+	"pattern-lab/core": "^2.0.0"
   }
 }
